Finished template creation modification and deletion
